Began work on @ASG (which we need soon for device assign)