@@ -31,7 +31,50 @@ abstract class Handler {
             if (((bit & hp._optionWord) != 0) && ((bit & allowedOptions) == 0)) {
                 var params = new String[]{ String.format("%c", letter) };
                 hp._statement._facStatusResult.postMessage(FacStatusCode.IllegalOption, params);
+                hp._statement._resultCode |= 0_400000_400000L;
                 result = false;
+            }
+
+            if (bit == Word36.Z_OPTION) {
+                break;
+            } else {
+                letter++;
+                bit >>= 1;
+            }
+        }
+
+        if (!result && hp._sourceIsExecRequest) {
+            hp._runControlEntry.postContingency(012, 04, 040);
+        }
+
+        return result;
+    }
+
+    /**
+     * Scans the options field in the packet to determine if more than one of the options
+     * in the exclusive options mask are set in the options set.
+     * Posts a contingency if there is an violation and the source is ER CSF$/ACSF$/CSI$.
+     * @return true if there are no exclusion violations, else false
+     */
+    protected boolean checkMutuallyExclusiveOptions(final HandlerPacket hp,
+                                                    final long exclusiveOptions) {
+        long bit = Word36.A_OPTION;
+        char letter = 'A';
+        boolean result = true;
+        char previousLetterSet = 0;
+
+        while (true) {
+            if (((bit & hp._optionWord) != 0) && ((bit & exclusiveOptions) == 0)) {
+                if (previousLetterSet == 0) {
+                    previousLetterSet = letter;
+                } else {
+                    var params = new String[]{ String.format("%c", previousLetterSet), String.format("%c", letter) };
+                    hp._statement._facStatusResult.postMessage(FacStatusCode.IllegalOptionCombination, params);
+                    hp._statement._resultCode |= 0_400000_400000L;
+                    result = false;
+                    // stop now - only report first of the potential conflicts
+                    break;
+                }
             }
 
             if (bit == Word36.Z_OPTION) {
@@ -58,7 +101,7 @@ abstract class Handler {
     protected boolean cleanOptions(final HandlerPacket hp) {
         hp._optionWord = 0;
         if (!hp._statement._optionsFields.isEmpty()) {
-            var optStr = hp._statement._optionsFields.get(0);
+            var optStr = hp._statement._optionsFields.getFirst();
             for (var ch : optStr.toUpperCase().toCharArray()) {
                 if (!Character.isAlphabetic(ch)) {
                     LogManager.logWarning(hp._statement._mnemonic, "Error in options field:%s", optStr);
